fix for ghost-center on firefox

--- a/public/less/core.less
+++ b/public/less/core.less
@@ -83,7 +83,7 @@ html, .footer-nav{
   content: " ";
   display: inline-block;
   height: 100%;
-  width: 0%;
+  width: 1%;
   vertical-align: middle;
 }
 .ghost-center div {
